--- a/index.html
+++ b/index.html
@@ -279,7 +279,40 @@
   <div class="contact module me-turquoise" id="contact">
 
     <!-- Testimonials -->
+    <section class="testim" id="testim">
+      <div class="wrap">
 
+        <span id="right-arrow" class="arrow right fa fa-chevron-right"></span>
+        <span id="left-arrow" class="arrow left fa fa-chevron-left"></span>
+
+        <ul class="dots" id="testim-dots">
+          <li class="dot active"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+        </ul>
+
+        <div class="cont" id="testim-content">
+
+          <div class="active">
+            <div class="img"><img src="p1.jpg"></div>
+            <h2>Lorem N. Ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quasi aliquid vel voluptatum
+                deleniti! Corrupti velit, porro facere facilis laboriosam accusantium, eos beatae maiores.</p>
+          </div>
+              
+          <div>
+            <div class="img"><img src="p2.jpg"></div>
+            <h2>Lorem L. Ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quasi aliquid vel voluptatum
+                deleniti! Corrupti velit, porro facere facilis laboriosam accusantium, eos beatae maiores.</p>
+          </div>
+              
+        </div>
+
+      </div>
+    </section>
     <!-- End Testimonials -->
 
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>kevingil23@gmail.com</p>
